--- a/Sport.Mobile.Shared/Sport.Mobile.Shared.csproj
+++ b/Sport.Mobile.Shared/Sport.Mobile.Shared.csproj
@@ -129,14 +129,14 @@
     <Compile Include="Interfaces\IToastNotifier.cs" />
     <Compile Include="Helpers\Constants.cs" />
     <Compile Include="Pages\AuthenticationPage.xaml.cs">
-		<DependentUpon>AuthenticationPage.xaml</DependentUpon>
-	</Compile>
+      <DependentUpon>AuthenticationPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\BaseContentPage.cs" />
     <Compile Include="Helpers\SharedExtensions.cs" />
     <Compile Include="Converters.cs" />
     <Compile Include="UserControls\LeagueListView.xaml.cs">
-		<DependentUpon>LeagueListView.xaml</DependentUpon>
-	</Compile>
+      <DependentUpon>LeagueListView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\SportButton.cs" />
     <Compile Include="Pages\LeagueDetailsPage.xaml.cs">
       <DependentUpon>LeagueDetailsPage.xaml</DependentUpon>
@@ -272,17 +272,20 @@
     <Reference Include="NControl.Controls">
       <HintPath>..\packages\NControl.Controls.0.9.4.1\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\NControl.Controls.dll</HintPath>
     </Reference>
+    <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>../packages/Xamarin.Forms.2.5.0.122203/lib/portable-win+net45+wp80+win81+wpa81/Xamarin.Forms.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Platform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>../packages/Xamarin.Forms.2.5.0.122203/lib/portable-win+net45+wp80+win81+wpa81/Xamarin.Forms.Platform.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Xaml, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>../packages/Xamarin.Forms.2.5.0.122203/lib/portable-win+net45+wp80+win81+wpa81/Xamarin.Forms.Xaml.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="XFGloss">
       <HintPath>..\packages\Ansuria.XFGloss.1.0.6.59\lib\portable-net45+wp8+win8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\XFGloss.dll</HintPath>
-    </Reference>
-    <Reference Include="Xamarin.Forms.Core">
-      <HintPath>..\packages\Xamarin.Forms.2.3.4.247\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Xamarin.Forms.Platform">
-      <HintPath>..\packages\Xamarin.Forms.2.3.4.247\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Platform.dll</HintPath>
-    </Reference>
-    <Reference Include="Xamarin.Forms.Xaml">
-      <HintPath>..\packages\Xamarin.Forms.2.3.4.247\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Azure.Mobile">
       <HintPath>..\packages\Microsoft.Azure.Mobile.0.12.0\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Microsoft.Azure.Mobile.dll</HintPath>
@@ -338,5 +341,11 @@
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
   <Import Project="..\packages\Xamarin.Forms.2.3.1.114\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.1.114\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
-  <Import Project="..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
+  <Import Project="../packages/Xamarin.Forms.2.5.0.122203/build/portable-win+net45+wp80+win81+wpa81/Xamarin.Forms.targets" Condition="Exists('../packages/Xamarin.Forms.2.5.0.122203/build/portable-win+net45+wp80+win81+wpa81/Xamarin.Forms.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('../packages/Xamarin.Forms.2.5.0.122203/build/portable-win+net45+wp80+win81+wpa81/Xamarin.Forms.targets')" Text="$([System.String]::Format('$(ErrorText)', '../packages/Xamarin.Forms.2.5.0.122203/build/portable-win+net45+wp80+win81+wpa81/Xamarin.Forms.targets'))" />
+  </Target>
 </Project>
