--- a/Sport.Mobile.Droid/packages.config
+++ b/Sport.Mobile.Droid/packages.config
@@ -19,7 +19,7 @@
   <package id="NControl" version="0.9.1.0" targetFramework="monoandroid60" />
   <package id="NControl.Controls" version="0.9.4.1" targetFramework="monoandroid60" />
   <package id="NETStandard.Library" version="2.0.0" targetFramework="monoandroid81" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="monoandroid60" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid80" />
   <package id="NGraphics" version="0.4.0" targetFramework="monoandroid60" />
   <package id="SkiaSharp" version="1.58.0" targetFramework="monoandroid71" />
   <package id="SkiaSharp.Views" version="1.58.0" targetFramework="monoandroid71" />
@@ -79,26 +79,29 @@
   <package id="Xam.Plugin.Connectivity" version="2.3.0" targetFramework="monoandroid60" />
   <package id="Xam.Plugin.Version" version="1.0.0.0" targetFramework="MonoAndroid60" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="monoandroid60" />
-  <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Compat" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Core.UI" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.CustomTabs" version="25.3.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Design" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Fragment" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Media.Compat" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Transition" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v4" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.Palette" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Annotations" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Compat" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Core.UI" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.CustomTabs" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Design" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Fragment" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Transition" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v4" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.Palette" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="26.1.0.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Build.Download" version="0.4.4" targetFramework="monoandroid71" />
-  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="monoandroid71" />
+  <package id="Xamarin.Forms" version="2.5.0.122203" targetFramework="monoandroid80" />
   <package id="Xamarin.Forms.CarouselView" version="2.3.0-pre2" targetFramework="monoandroid60" />
   <package id="Xamarin.GooglePlayServices.Auth" version="42.1021.1" targetFramework="monoandroid71" />
   <package id="Xamarin.GooglePlayServices.Auth.Base" version="42.1021.1" targetFramework="monoandroid71" />
